// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should use default secret for running drop-autodevops-dbs 1`] = `
Object {
  "apiVersion": "batch/v1",
  "kind": "Job",
  "metadata": Object {
    "name": "drop-azure-autodevops-dbs-b123a99",
  },
  "spec": Object {
    "backoffLimit": 0,
    "template": Object {
      "metadata": Object {},
      "spec": Object {
        "containers": Array [
          Object {
            "command": Array [
              "drop-autodevops-dbs",
            ],
            "envFrom": Array [
              Object {
                "secretRef": Object {
                  "name": "azure-pg-admin-user",
                },
              },
            ],
<<<<<<< HEAD
            "image": "ghcr.io/socialgouv/docker/azure-db:6.39.1",
=======
            "image": "ghcr.io/socialgouv/docker/azure-db:6.38.5",
>>>>>>> e1da35d97 (fix: Add autodevops template.)
            "imagePullPolicy": "IfNotPresent",
            "name": "drop-autodevops-dbs",
            "resources": Object {
              "limits": Object {
                "cpu": "300m",
                "memory": "256Mi",
              },
              "requests": Object {
                "cpu": "100m",
                "memory": "64Mi",
              },
            },
          },
        ],
        "restartPolicy": "Never",
      },
    },
  },
}
`;

exports[`should use some-secret for running drop-autodevops-dbs 1`] = `
Object {
  "apiVersion": "batch/v1",
  "kind": "Job",
  "metadata": Object {
    "name": "drop-azure-autodevops-dbs-b123a99",
  },
  "spec": Object {
    "backoffLimit": 0,
    "template": Object {
      "metadata": Object {},
      "spec": Object {
        "containers": Array [
          Object {
            "command": Array [
              "drop-autodevops-dbs",
            ],
            "envFrom": Array [
              Object {
                "secretRef": Object {
                  "name": "some-secret",
                },
              },
            ],
<<<<<<< HEAD
            "image": "ghcr.io/socialgouv/docker/azure-db:6.39.1",
=======
            "image": "ghcr.io/socialgouv/docker/azure-db:6.38.5",
>>>>>>> e1da35d97 (fix: Add autodevops template.)
            "imagePullPolicy": "IfNotPresent",
            "name": "drop-autodevops-dbs",
            "resources": Object {
              "limits": Object {
                "cpu": "300m",
                "memory": "256Mi",
              },
              "requests": Object {
                "cpu": "100m",
                "memory": "64Mi",
              },
            },
          },
        ],
        "restartPolicy": "Never",
      },
    },
  },
}
`;
